WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278654
[Debug] ASSERTION FAILED on `fast/rendering/render-list-marker-select.html`
https://bugs.webkit.org/show_bug.cgi?id=278654
Summary
[Debug] ASSERTION FAILED on `fast/rendering/render-list-marker-select.html`
Vitaly Dyackhov
Reported
2024-08-26 08:44:00 PDT
STDERR: ASSERTION FAILED: When matching pseudo elements, we should never compile a selector checker without context unless it cannot match anything. STDERR: !SelectorCompiler::ruleCollectorSimpleSelectorChecker(compiledSelector, &element(), &ignoreSpecificity) || !m_pseudoElementRequest STDERR: /home/vitaly/WebKit/Source/WebCore/style/ElementRuleCollector.cpp(495) : bool WebCore::Style::ElementRuleCollector::ruleMatches(const WebCore::Style::RuleData&, unsigned int&, WebCore::Style::ScopeOrdinal, const WebCore::ContainerNode*) STDERR: 1 0x7f10b35d1d93 WebCore::Style::ElementRuleCollector::ruleMatches(WebCore::Style::RuleData const&, unsigned int&, WebCore::Style::ScopeOrdinal, WebCore::ContainerNode const*) STDERR: 2 0x7f10b35d23c8 operator() STDERR: 3 0x7f10b35d2840 WebCore::Style::ElementRuleCollector::collectMatchingRulesForList(WTF::Vector<WebCore::Style::RuleData, 1ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc> const*, WebCore::Style::MatchRequest const&) STDERR: 4 0x7f10b35d0ba6 WebCore::Style::ElementRuleCollector::collectMatchingRules(WebCore::Style::MatchRequest const&) STDERR: 5 0x7f10b35d0413 WebCore::Style::ElementRuleCollector::collectMatchingRules(WebCore::Style::CascadeLevel) STDERR: 6 0x7f10b35d0faf WebCore::Style::ElementRuleCollector::matchAuthorRules() STDERR: 7 0x7f10b3670db5 WebCore::Style::Resolver::styleForPseudoElement(WebCore::Element&, WebCore::Style::PseudoElementRequest const&, WebCore::Style::ResolutionContext const&) STDERR: 8 0x7f10b367ef47 WebCore::Style::TreeResolver::resolvePseudoElement(WebCore::Element&, WebCore::Style::PseudoElementIdentifier const&, WebCore::Style::ElementUpdate const&, WebCore::Style::IsInDisplayNoneTree) STDERR: 9 0x7f10b367de70 operator() STDERR: 10 0x7f10b367e611 WebCore::Style::TreeResolver::resolveElement(WebCore::Element&, WebCore::RenderStyle const*, WebCore::Style::TreeResolver::ResolutionType) STDERR: 11 0x7f10b36830b1 WebCore::Style::TreeResolver::resolveComposedTree() STDERR: 12 0x7f10b3683c1b WebCore::Style::TreeResolver::resolve() STDERR: 13 0x7f10b168dac6 WebCore::Document::resolveStyle(WebCore::Document::ResolveStyleType) STDERR: 14 0x7f10b168e5bf WebCore::Document::updateStyleIfNeeded() STDERR: 15 0x7f10b16ac027 WebCore::Document::finishedParsing() STDERR: 16 0x7f10b1e89d60 WebCore::HTMLConstructionSite::finishedParsing() STDERR: 17 0x7f10b1eee791 WebCore::HTMLTreeBuilder::finished() STDERR: 18 0x7f10b1e90c4e WebCore::HTMLDocumentParser::end() STDERR: 19 0x7f10b1e90d9e WebCore::HTMLDocumentParser::attemptToRunDeferredScriptsAndEnd() STDERR: 20 0x7f10b1e8f326 WebCore::HTMLDocumentParser::prepareToStopParsing() STDERR: 21 0x7f10b1e90ddd WebCore::HTMLDocumentParser::attemptToEnd() STDERR: 22 0x7f10b1e90e99 WebCore::HTMLDocumentParser::finish() STDERR: 23 0x7f10b22fdb5a WebCore::DocumentWriter::end() STDERR: 24 0x7f10b22e5d04 WebCore::DocumentLoader::finishedLoading() STDERR: 25 0x7f10b22e56e9 WebCore::DocumentLoader::notifyFinished(WebCore::CachedResource&, WebCore::NetworkLoadMetrics const&, WebCore::LoadWillContinueInAnotherProcess) STDERR: 26 0x7f10b246b821 WebCore::CachedResource::checkNotify(WebCore::NetworkLoadMetrics const&, WebCore::LoadWillContinueInAnotherProcess) STDERR: 27 0x7f10b246b9c3 WebCore::CachedResource::finishLoading(WebCore::FragmentedSharedBuffer const*, WebCore::NetworkLoadMetrics const&) STDERR: 28 0x7f10b246684b WebCore::CachedRawResource::finishLoading(WebCore::FragmentedSharedBuffer const*, WebCore::NetworkLoadMetrics const&) STDERR: 29 0x7f10b23eb0f1 WebCore::SubresourceLoader::didFinishLoading(WebCore::NetworkLoadMetrics const&) STDERR: 30 0x7f10adc8e9f9 WebKit::WebResourceLoader::didFinishResourceLoad(WebCore::NetworkLoadMetrics&&) STDERR: 31 0x7f10ac8ed726 auto IPC::callMemberFunction<WebKit::WebResourceLoader, WebKit::WebResourceLoader, void (WebCore::NetworkLoadMetrics&&), std::tuple<WebCore::NetworkLoadMetrics> >(WebKit::WebResourceLoader*, void (WebKit::WebResourceLoader::*)(WebCore::NetworkLoadMetrics&&), std::tuple<WebCore::NetworkLoadMetrics>&&)::{lambda((auto:1&&)...)#1}::operator()<WebCore::NetworkLoadMetrics>(WebCore::NetworkLoadMetrics&&) const STDERR: WebKitWebProcess terminated (pid 103828) for reason: crash
Attachments
Add attachment
proposed patch, testcase, etc.
Vitaly Dyackhov
Comment 1
2024-08-26 08:47:51 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32706
Radar WebKit Bug Importer
Comment 2
2024-09-02 08:44:15 PDT
<
rdar://problem/135146456
>
EWS
Comment 3
2024-09-10 11:07:45 PDT
Committed
283428@main
(b9e946421ea6): <
https://commits.webkit.org/283428@main
> Reviewed commits have been landed. Closing PR #32706 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug