Cherry-pick 283428@main (b9e946421ea6). https://bugs.webkit.org/show_bug.cgi?id=278654

[Debug] ASSERTION FAILED on `fast/rendering/render-list-marker-select.html`
    https://bugs.webkit.org/show_bug.cgi?id=278654

    Reviewed by Matthieu Dubet.

    Do not compile `:is()` selector if it contains a pseudo-element subselector.

    * LayoutTests/TestExpectations:
    * Source/WebCore/cssjit/SelectorCompiler.cpp:
    (WebCore::SelectorCompiler::addPseudoClassType)

    Canonical link: https://commits.webkit.org/283428@main

Canonical link: https://commits.webkit.org/274313.443@webkitglib/2.44